--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.4.2"
+nickel = "0.11.0"
 lz4 = "1.23.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
